apps/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  labels:
    app.kubernetes.io/name: linkding
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: linkding
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.47.0-alpine
          ports:
            - name: http
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /health
              port: http
          volumeMounts:
            - name: data
              mountPath: /etc/linkding/data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
