apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  selector:
    app.kubernetes.io/name: linkding
  ports:
    - name: http
      port: 80
      targetPort: http
